# stm32_pm2025

./: CMakeLists.txt  main.c
inc/: gpio.h  spi.h  ssd1306.h
src/: gpio.c  spi.c  ssd1306.c
